feat: delete fruit
