# docs/swagger.yaml
@@ -175,7 +175,7 @@ paths:
       summary: create fruit
       tags:
       - fruit
-  /v1/fruits/{fruitID}/buckets/{bucketID}:
+  /v1/fruits/{fruitID}:
     delete:
       consumes:
       - application/json
@@ -185,9 +185,30 @@ paths:
         name: fruitID
         required: true
         type: integer
-      - description: Bucket ID
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/presenters.ErrorRes'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/presenters.ErrorRes'
+      summary: delete fruit
+      tags:
+      - fruit
+  /v1/fruits/{fruitID}/buckets:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: Fruit ID
         in: path
-        name: bucketID
+        name: fruitID
         required: true
         type: integer
       produces:
@@ -206,6 +227,7 @@ paths:
       summary: remove fruit from bucket
       tags:
       - fruit
+  /v1/fruits/{fruitID}/buckets/{bucketID}:
     post:
       consumes:
       - application/json
