# internal/controllers/interfaces.go
@@ -19,5 +19,6 @@ type BucketService interface {
 type FruitService interface {
 	Create(ctx context.Context, data dtos.CreateFruitDto) (*models.Fruit, error)
 	AddOnBucket(ctx context.Context, fruitID, bucketID int64) error
-	RemoveFromBucket(ctx context.Context, fruitID, bucketID int64) error
+	RemoveFromBucket(ctx context.Context, fruitID int64) error
+	Delete(ctx context.Context, fruitID int64) error
 }
